--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "posttest": "npm run lint",
     "test:dev": "lb-mocha --allow-console-logs dist/__tests__/**/*.js && npm run posttest",
     "clean": "lb-clean dist *.tsbuildinfo .eslintcache",
-    "rebuild": "npm run clean && npm run build"
+    "rebuild": "npm run clean && npm run build",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -47,13 +48,17 @@
     "tslib": "^2.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
     "@loopback/build": "^9.0.9",
-    "source-map-support": "^0.5.21",
     "@loopback/core": "^4.0.9",
+    "@loopback/eslint-config": "^13.0.9",
     "@loopback/testlab": "^5.0.9",
     "@types/node": "^14.18.36",
-    "@loopback/eslint-config": "^13.0.9",
     "eslint": "^8.35.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.2.1",
+    "source-map-support": "^0.5.21",
     "typescript": "~4.9.4"
   }
 }
