--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@loopback/core": "^4.0.9"
   },
   "dependencies": {
+    "@loopback/repository": "^5.1.5",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
