feat: set up semantic release workflow

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "core",
-  "version": "0.0.1",
+  "name": "@say-developer/core",
+  "version": "0.0.0-development",
   "description": "core",
   "keywords": [
     "loopback-extension",
@@ -27,7 +27,8 @@
     "test:dev": "lb-mocha --allow-console-logs dist/__tests__/**/*.js && npm run posttest",
     "clean": "lb-clean dist *.tsbuildinfo .eslintcache",
     "rebuild": "npm run clean && npm run build",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
@@ -60,6 +61,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^13.2.1",
     "source-map-support": "^0.5.21",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "semantic-release": "^21.0.1"
   }
 }
