--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,8 @@ jobs:
           node-version: 'lts/*'
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
+      - name: Build
+        run: pnpm build
       - name: Verify the integrity of provenance attestations and registry signatures for installed dependencies
         run: npm audit signatures
       - name: Release
